--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -14,7 +14,7 @@
 
      <div> <h3> <p id= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
 
-<div><h4 id= "content">
+<div><p> id= "content">
 
     <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-01-zkgb/28biz-nepal-ev-01-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">(The New York Times). </p> </h5> </div>
@@ -185,6 +185,6 @@ Lydia DePillis reports on the American economy for The Times. She has been a jou
 </div>
 
 
-</h4></div>
+</p></div>
 </body>
 </html>
