--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -12,7 +12,7 @@
         <div> <h2> <p id= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
         <div> <h3> <p id= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
 
-<div><p> id= "content">
+<div><p id= "content">
 
     <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-01-zkgb/28biz-nepal-ev-01-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">(The New York Times). </p> </h5> </div>
