--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -82,7 +82,7 @@ Finally, the government set electricity costs for chargers at less than market r
  <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-05-zkgb/28biz-nepal-ev-05-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The E.V. market share in Nepal is now behind only those a few countries, including Norway, Singapore and Ethiopia.</p> <p class= "credit"> (The New York Times). </p> </h5> </div>
 
-<blockquote> <h1>“Many people were pushing for fossil fuels, but there was no one advocating for electric vehicles,” Ms. Shrestha said. </h1> </blockquote> 
+<blockquote> <p class= "blockquote"> “Many people were pushing for fossil fuels, but there was no one advocating for electric vehicles,” Ms. Shrestha said. </p> </blockquote> 
 
 <div> <h2> <p class="section"></p> ‘A Win-Win Situation’</p> </h2> </div>
 <br>
