--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -6,14 +6,17 @@
     </head>
 
     <body>
+        <!-- Original masthead made in AdobeXD-->
 <iframe width="100%" height="366" src="https://xd.adobe.com/embed/1dc8a4f6-df6a-4135-89e2-2a289e0d0911-489b/" frameborder="0" allowfullscreen></iframe>
 
+<!-- Headline, subhead and byline-->
         <div> <h1> <p id= "headline">The Country Where 76% of Cars Sold Are Electric </p> </h1> </div>
         <div> <h2> <p id= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
         <div> <h3> <p id= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
 
 <div><p id= "content">
 
+<!-- Image and caption-->
 <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-01-zkgb/28biz-nepal-ev-01-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">(The New York Times). </p> </h5> </div>
 <br><br>
@@ -79,9 +82,11 @@ Finally, the government set electricity costs for chargers at less than market r
 “At first, everybody was scared — how to establish and whether it would run or not,” said Kul Man Ghising, who managed the electricity authority until March. “But we tried and tried and tried.” Businesses have now installed about 1,200 chargers, according to the agency, and private residences are likely to have thousands more. 
 <br><br>
 
+<!-- Image and caption-->
  <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-05-zkgb/28biz-nepal-ev-05-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The E.V. market share in Nepal is now behind only those a few countries, including Norway, Singapore and Ethiopia.</p> <p class= "credit"> (The New York Times). </p> </h5> </div>
 
+<!-- Blockquote-->
 <blockquote> <p class= "blockquote"> “Many people were pushing for fossil fuels, but there was no one advocating for electric vehicles,” Ms. Shrestha said. </p> </blockquote> 
 
 <div> <h2> <p class="section"></p> ‘A Win-Win Situation’</p> </h2> </div>
@@ -125,6 +130,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
 “It’s a very positive direction they are going in, but it really comes down to the long-term policy,” Mr. Shrestha said. “Stability is always a question mark.” 
 <br><br>
 
+<!-- Image and caption-->
  <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-04-zkgb/28biz-nepal-ev-04-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> (The New York Times). </p> </h5> </div>
 <br>
@@ -172,6 +178,7 @@ Lydia DePillis reports on the American economy for The Times. She has been a jou
 <br><br>
 
 
+<!-- Read more links section-->
 <div id="Links">
     <ul>
         <h2> <p> READ MORE</p> </h2>
