--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -10,7 +10,7 @@
 <iframe width="100%" height="366" src="https://xd.adobe.com/embed/1dc8a4f6-df6a-4135-89e2-2a289e0d0911-489b/" frameborder="0" allowfullscreen></iframe>
 
 <!-- Headline, subhead and byline-->
-        <div> <h1> <p id= "headline">The Country Where 76% of Cars Sold Are Electric </p> </h1> </div>
+        <div> <h1> <p id= "headline">A Look Inside Nepal's Growing Electric Vehicle Ownership </p> </h1> </div>
         <div> <h2> <p id= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
         <div> <h3> <p id= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
 
