--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -17,6 +17,13 @@
     <div> <h2> <p id="subhead1"> For almost fifty years, they carried the bags of golf legends but also masterminded victories from the tees to the holes. Then, with one decision, their lives shifted, and the legacy of their glory days went unheralded.</p></h2></div>
     <div> <h2> <p id="subhead2"> Finally, that’s changing.</p></h2></div> 
     <div> <h4> <p id="byline/date"> By Latria Graham <br> April/May 2024</p></h4></div>
+
+<p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
+
+<p> Do you remember when…? How about that time…? What about when Willie Peterson wound up on the cover of Sports Illustrated back in seventy-two? Wasn’t that something?</p>
+
+
+    end
 </div>
 </body>
 
