--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -18,6 +18,8 @@
     <div> <h2> <p id="subhead2"> Finally, that’s changing.</p></h2></div> 
     <div> <h4> <p id="byline/date"> By Latria Graham <br> April/May 2024</p></h4></div>
 
+
+    <div class="maintext">
 <p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
 
 <p> Do you remember when…? How about that time…? What about when Willie Peterson wound up on the cover of Sports Illustrated back in seventy-two? Wasn’t that something?</p>
@@ -110,7 +112,7 @@
 
 <p>The camp will end at noon, and depending on what the sky looks like, Lacey might head to the Patch afterward, to the beloved clubhouse with its treasured card games. Perhaps he’ll even join the old caddies for a round. “Every day is a good day,” one might remind the other. And as they prepare to play, the private jets will rocket over their heads on their way to somewhere else, the aircraft disappearing beyond the horizon as the Black golfers of Augusta shoulder their bags and head toward the first tee.</p>
 
-
+</div>
 
 
 </div>
