--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -16,7 +16,7 @@
     <div> <h1> <p id="headline"> A Mulligan for The Masters: The Black Caddies Who Became The Pride of Augusta</p></h1></div>
     <div> <h3> <p id="subhead1"> For almost fifty years, they carried the bags of golf legends but also masterminded victories from the tees to the holes. Then, with one decision, their lives shifted, and the legacy of their glory days went unheralded.</p></h3></div>
     <div> <h3> <p id="subhead2"> Finally, that’s changing.</p></h3></div> 
-    <div> <h4> <p id="byline/date"> By Latria Graham <br> April/May 2024</p></h4></div>
+    <div> <h4> <p id="bylinedate"> By Latria Graham <br> April/May 2024</p></h4></div>
 
 
     <div class="maintext">
