--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -20,6 +20,8 @@
 
 
     <div class="maintext">
+
+      <a> <img src="image3.jpg" alt="Black Caddies Sitting On Golf Course" style="width:600px;height:400px;"> </a>
 <p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
 
 <p> Do you remember when…? How about that time…? What about when Willie Peterson wound up on the cover of Sports Illustrated back in seventy-two? Wasn’t that something?</p>
@@ -115,6 +117,9 @@
 </div>
 
 
+
+
+end
 </div>
 </body>
 
