--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -22,7 +22,8 @@
     <div class="maintext">
 
       <a> <img src="image3.jpg" alt="Black Caddies Sitting On Golf Course" style="width:600px;height:400px;"> </a>
-     <div> <p class="caption"> Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965. (Source: Garden & Gun).</p> </div>
+      <div> <p class="caption"> Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965. (Source: Garden & Gun).</p> </div>
+
 <p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
 
 <p> Do you remember when…? How about that time…? What about when Willie Peterson wound up on the cover of Sports Illustrated back in seventy-two? Wasn’t that something?</p>
@@ -40,6 +41,10 @@
 <p>For thousands of years, the Savannah River’s overflowing waters dumped sand, silt, and detritus onto what would one day become Augusta, leaving fertile soil in their wake. By 1858, three hundred or so particularly arable acres landed in the hands of Louis Mathieu Edouard Berckmans and his son Prosper Jules Alphonse, Belgian immigrants and horticulturists with an interest in fruit and ornamental trees and shrubs. All told, the Berckmans cultivated more than three hundred varieties of peach trees alone and grew a million-plus fruit trees, turning Berckmans Nursery into the first large-scale plant source of its kind in the Southeast. A “horticulture Mecca,” heralded the American Pomological Society, “serving the entire nation.” Folks around Augusta simply called it “Fruitland.”</p>
 
 <p>More than seventy years later, in 1931, the Georgia-born golf champion Bobby Jones and his partner, Clifford Roberts, a Wall Street investment banker, bought the nursery’s spread with plans to fashion a golf course from its landscape. Fruitland Manor became the clubhouse of the new Augusta National Golf Club. Many of the plant varieties the Berckmans developed and improved still grow on Augusta National’s meticulously curated grounds.</p>
+
+ <a> <img src="image7.jpg" alt="Black Caddies Sitting On Golf Course" style="width:600px;height:400px;"> </a>
+     <div> <p class="caption"> Palmer, Hogan, and caddies including Nathaniel “Iron Man” Avery. (Source: Garden & Gun).</p> </div>
+
 
 <p>Immediately south, sandwiched between the Augusta Country Club and a campus of what is now Augusta University, lies Sand Hills, a Black neighborhood listed on the National Register of Historic Places where most of the caddies grew up. Much of their lives back then took place there “up on the hill,” three miles from downtown as the crow flies, looming hundreds of feet above the then flood-prone city. Close enough to the city’s seats of power that the residents could work in them, even if they could not walk through their front doors. Still, the community felt like “one big family,” recalls Jim Dent, filled with adults who cared about his well-being and corrected his wrongdoings. But “the grandfather of caddies” came from even closer: Fruitland itself.</p>
 
