--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -42,7 +42,7 @@
 
 <p>More than seventy years later, in 1931, the Georgia-born golf champion Bobby Jones and his partner, Clifford Roberts, a Wall Street investment banker, bought the nursery’s spread with plans to fashion a golf course from its landscape. Fruitland Manor became the clubhouse of the new Augusta National Golf Club. Many of the plant varieties the Berckmans developed and improved still grow on Augusta National’s meticulously curated grounds.</p>
 
- <a> <img src="image7.jpg" alt="Black Caddies Sitting On Golf Course" style="width:600px;height:400px;"> </a>
+ <a> <img src="image7.jpg" alt="Black Caddies Sitting On Golf Course"> </a>
      <div> <p class="caption"> Palmer, Hogan, and caddies including Nathaniel “Iron Man” Avery. (Source: Garden & Gun).</p> </div>
 
 
