--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -42,9 +42,10 @@
 
 <p>More than seventy years later, in 1931, the Georgia-born golf champion Bobby Jones and his partner, Clifford Roberts, a Wall Street investment banker, bought the nursery’s spread with plans to fashion a golf course from its landscape. Fruitland Manor became the clubhouse of the new Augusta National Golf Club. Many of the plant varieties the Berckmans developed and improved still grow on Augusta National’s meticulously curated grounds.</p>
 
+<center>
  <a> <img src="image7.jpg" alt="Black Caddies Sitting On Golf Course" style="width:600px;height:400px;"> </a>
      <div> <p class="caption"> Palmer, Hogan, and caddies including Nathaniel “Iron Man” Avery. (Source: Garden & Gun).</p> </div>
-
+</center>
 
 <p>Immediately south, sandwiched between the Augusta Country Club and a campus of what is now Augusta University, lies Sand Hills, a Black neighborhood listed on the National Register of Historic Places where most of the caddies grew up. Much of their lives back then took place there “up on the hill,” three miles from downtown as the crow flies, looming hundreds of feet above the then flood-prone city. Close enough to the city’s seats of power that the residents could work in them, even if they could not walk through their front doors. Still, the community felt like “one big family,” recalls Jim Dent, filled with adults who cared about his well-being and corrected his wrongdoings. But “the grandfather of caddies” came from even closer: Fruitland itself.</p>
 
