--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -20,9 +20,10 @@
 
 
     <div class="maintext">
-
+<center>
       <a> <img src="image3.jpg" alt="Black Caddies Sitting On Golf Course" style="width:600px;height:400px;"> </a>
       <div> <p class="caption"> Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965. (Source: Garden & Gun).</p> </div>
+</center>
 
 <p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
 
