--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -22,8 +22,9 @@
     <div class="maintext">
 <center>
       <a> <img src="image3.jpg" alt="Black Caddies Sitting On Golf Course" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965. (Source: Garden & Gun).</p> </div>
 </center>
-<div> <p class="caption"> Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965. (Source: Garden & Gun).</p> </div>
+
 
 <p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
 
@@ -67,6 +68,11 @@
 <p>In those early days, ever one step away from being called “boy,” this second generation of caddies became a cast of characters known instead by the nicknames they gave one another, often sparked by funny childhood moments. Bennett got called Burnt Biscuits because he tried to steal one of his grandmother’s biscuits and burned himself so badly, he wound up in the hospital. Jones became Cigarette after he got caught smoking while underage. Dent, though smaller in stature than he used to be, still stands a head above the other caddies, hence Big Boy. Choice’s sobriquet, Stabber, came from his golf technique: He just kept stabbing the ball.</p>
 
 <p>The best caddies employ the properties and laws that govern space, time, energy, and matter—but using only their eyes and ears to assess equations that are always changing. Every day they wake up, walk the greens, and run their calculations again, adjusting for a golfer’s fortes, foibles, and equipment. Caddies must be naturalist, physicist, and psychologist, all wrapped in one white coverall.</p>
+
+<center>
+      <a> <img src="image9.jpg" alt="Black Caddies Working The Masters" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Golfers Gil Morgan and Gary Player with their caddies in 1981. (Source: Garden & Gun).</p> </div>
+</center>
 
 <p>That dynamic played out during the 1979 Masters, when Jariah “Bubba” Beard was on the bag for Fuzzy Zoeller. “As far as having a plan when I got to Augusta…I had no plan,” Zoeller admitted in Loopers: The Caddie’s Long Walk, a 2019 documentary about the worldwide history of caddies, also known as loopers. “[Beard] told me where to hit it, where not to hit it…it was like a blind man with a Seeing Eye dog. He led me around that golf course.” By relying on Beard, Zoeller became the last Masters player to win the tournament on his first try—a feat that, without a local caddie, no one can seem to repeat.</p>
 
