--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -106,6 +106,11 @@
 
 <p>The numbers of the old-school Black caddies have decreased, and recognition has come but lately. Lee Elder—a former caddie who also broke the Masters race barrier as a player, in 1975—died in 2021, not long after Augusta National and Paine College, an HBCU in Augusta, partnered to create endowed scholarships in his name. In 2023, Jariah Beard succumbed to cancer, and John Luther Elam Jr., a caddie who helped desegregate the Patch, died too.</p>
 
+<center>
+      <a> <img src="image2.jpg" alt="Black Caddy Working The Masters" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Ben Hogan at the 1954 Masters with his caddie. (Source: Garden & Gun).</p> </div>
+</center>
+
 <p>The small Lucy Craft Laney Museum of Black History and Conference Center, housed in the former Augusta home of a prominent African American educator and activist, has also played a mighty part in recognizing the caddies. Since early 2023, on one weekend a month, the museum has presented “Men on the Bag: The Stories of Augusta’s Famous Black Caddies.” Through the artistic direction of the Augusta Mini Theatre, young actors portray three of the now-deceased iconic caddies. Corey Rogers, the Laney’s executive director, wrote much of the script, taking cues from Men on the Bag, a book by Ward Clayton that delves into the caddies’ backstories. Clayton will publish a revised version, The Legendary Caddies of Augusta National: Inside Stories from Golf ’s Greatest Stage, in early April.</p>
 
 <p>Even though now-gone greats like George “Fireball” Franklin, Nathaniel “Iron Man” Avery, John H. “Stovepipe” Gordon, and Frank “Marble Eye” Stokes may not appear in golf ’s official record, they are celebrated throughout the museum. Six-foot-tall banners bearing photographs of caddies in their element, or in a moment of victory, frame the room. Here they get to live large.</p>
