--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -141,9 +141,9 @@
     <ul>
         <p> RECOMMENDED ARTICLES FOR YOU
              <p><a href="https://gardenandgun.com/articles/a-federally-endangered-species-was-released-on-private-land-in-florida-thats-a-big-deal/" target=_new>A Federally Endangered Species Was Released on Private Land in Florida. That’s a Big Deal.</a></p>
-             <p><a href="https://gardenandgun.com/feature/a-century-on-the-chincoteague-pony-swim-still-sparks-unbridled-joy/" target=_new>A Century On, the Chincoteague Pony Swim Still Sparks Unbridled Joy</a></p>
-             <p><a href="https://gardenandgun.com/articles/a-federally-endangered-species-was-released-on-private-land-in-florida-thats-a-big-deal/" target=_new>A Federally Endangered Species Was Released on Private Land in Florida. That’s a Big Deal.</a></p>
-             <p><a href="https://gardenandgun.com/articles/a-federally-endangered-species-was-released-on-private-land-in-florida-thats-a-big-deal/" target=_new>A Federally Endangered Species Was Released on Private Land in Florida. That’s a Big Deal.</a></p>
+             <p><a href="https://gardenandgun.com/feature/a-century-on-the-chincoteague-pony-swim-still-sparks-unbridled-joy/" target=_new>A Century On, the Chincoteague Pony Swim Still Sparks Unbridled Joy.</a></p>
+             <p><a href="https://gardenandgun.com/articles/fly-fishing-legend-lefty-kreh-gets-his-due-onscreen/" target=_new>Fly-Fishing Legend Lefty Kreh Gets His Due Onscreen.</a></p>
+             <p><a href="https://gardenandgun.com/articles/where-to-see-frank-lloyd-wrights-architecture-in-the-south/" target=_new>Where to See Frank Lloyd Wright’s Architecture in the South.</a></p>
             </p>
     </ul>
 </div>
