--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -57,6 +57,10 @@
 
 <p>Augusta National first put on what would come to be called the Masters Tournament in 1934 with its rule in place—attributed to Roberts—that golfers would always be white, and the caddies would always be Black. The segregated course had support from the top: From that same year until 1961, the Professional Golfers’ Association of America had a “Caucasian-only” clause in its bylaws, preventing non-whites from membership and thus from competing on the PGA Tour.</p>
 
+<!-- Blockquote-->
+<blockquote> <p class="Blockquote"> “Golf was for the guys up on the hill,” he explains. “Growing up, we always said, ‘Man, that’s a white man’s sport.’” </p></blockquote>
+<!-- Blockquote end-->
+
 <p>In 1938, the seventeen-year-old Stokes won his first Masters as a caddie for eventual Hall of Famer Henry Picard. He won again in 1948, with Claude Harmon; in 1951 and 1953, with the legendary Ben Hogan; and in 1956, with Jack Burke Jr. Stokes ties with latter-day caddies Steve Williams and Willie Peterson for the greatest number of Masters wins (five), but he remains the only one to do it with four different golfers.</p>
 
 <p>Stokes decided to teach the Black youth in Sand Hills what he knew. Caddying, after all, could provide consistent income and food on the table, even if most chalked the job up as low-skill menial labor, in the realm of domestics and servants. (Back then, even if a caddie had a better assessment of the lay of the land, some golfers only wanted someone to carry their heavy bags over miles of terrain. In those instances, there were just three rules: Show up, keep up, and shut up.) By the time the second generation of caddies was born in the late thirties and early forties, interested boys could attend Pappy Stokes’s Saturday caddie school to learn how to read the greens and anticipate the forces at play in golf. Stokes “was like the godfather of us young kids,” Robert Jones says. “Knew that golf course like the back of his hand.”</p>
