--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -58,7 +58,7 @@
 <p>Augusta National first put on what would come to be called the Masters Tournament in 1934 with its rule in place—attributed to Roberts—that golfers would always be white, and the caddies would always be Black. The segregated course had support from the top: From that same year until 1961, the Professional Golfers’ Association of America had a “Caucasian-only” clause in its bylaws, preventing non-whites from membership and thus from competing on the PGA Tour.</p>
 
 <!-- Blockquote-->
-<blockquote> <p class="Blockquote"> “Golf was for the guys up on the hill,” he explains. “Growing up, we always said, ‘Man, that’s a white man’s sport.’” </p></blockquote>
+<blockquote> <p class="Blockquote"> “Growing up, we always said, ‘Man, that’s a white man’s sport.’” </p></blockquote>
 <!-- Blockquote end-->
 
 <p>In 1938, the seventeen-year-old Stokes won his first Masters as a caddie for eventual Hall of Famer Henry Picard. He won again in 1948, with Claude Harmon; in 1951 and 1953, with the legendary Ben Hogan; and in 1956, with Jack Burke Jr. Stokes ties with latter-day caddies Steve Williams and Willie Peterson for the greatest number of Masters wins (five), but he remains the only one to do it with four different golfers.</p>
