--- a/Midterm/Midterm.html
+++ b/Midterm/Midterm.html
@@ -1,18 +1,18 @@
-
+<!-- I did this Midterm by myself-->
 <html lang="en">
 
 <head>
 <link rel="stylesheet" type="text/css" href="Midterm.css">
-<title> Cait Heiderman Midterm </title>
-
-
+<title> The Augusta Peach </title>
 
 </head>
 
-
 <body>
+    <!-- Banner-->
     <iframe width="1352" height="330" src="https://xd.adobe.com/embed/f9d5d1ba-a5d9-4dec-95be-9834c7b49794-ac86/" frameborder="0" allowfullscreen></iframe>
 <div id="content">
+
+<!-- Headline, subheads, byline and date-->
     <div> <h1> <p id="headline"> A Mulligan for The Masters: The Black Caddies Who Became The Pride of Augusta</p></h1></div>
     <div> <h3> <p id="subhead1"> For almost fifty years, they carried the bags of golf legends but also masterminded victories from the tees to the holes. Then, with one decision, their lives shifted, and the legacy of their glory days went unheralded.</p></h3></div>
     <div> <h3> <p id="subhead2"> Finally, that’s changing.</p></h3></div> 
@@ -20,12 +20,15 @@
 
 
     <div class="maintext">
+
+<!-- Image-->
 <center>
       <a> <img src="image3.jpg" alt="Black Caddies Sitting On Golf Course" style="width:800px;height:600px;"> </a> 
       <div> <p class="caption"> Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965. (Source: Garden & Gun).</p> </div>
 </center>
 
 
+<!-- Beginning of article body-->
 <p> In a small cardroom at the back of a municipal golf course clubhouse in Augusta, Georgia, a handful of old men gather and reminisce.</p>
 
 <p> Do you remember when…? How about that time…? What about when Willie Peterson wound up on the cover of Sports Illustrated back in seventy-two? Wasn’t that something?</p>
@@ -44,6 +47,7 @@
 
 <p>More than seventy years later, in 1931, the Georgia-born golf champion Bobby Jones and his partner, Clifford Roberts, a Wall Street investment banker, bought the nursery’s spread with plans to fashion a golf course from its landscape. Fruitland Manor became the clubhouse of the new Augusta National Golf Club. Many of the plant varieties the Berckmans developed and improved still grow on Augusta National’s meticulously curated grounds.</p>
 
+<!-- Image-->
 <center>
  <a> <img src="image7.jpg" alt="Black Caddies Sitting On Golf Course" style="width:800px;height:600px;"> </a>
      <div> <p class="caption"> Palmer, Hogan, and caddies including Nathaniel “Iron Man” Avery. (Source: Garden & Gun).</p> </div>
@@ -73,6 +77,7 @@
 
 <p>The best caddies employ the properties and laws that govern space, time, energy, and matter—but using only their eyes and ears to assess equations that are always changing. Every day they wake up, walk the greens, and run their calculations again, adjusting for a golfer’s fortes, foibles, and equipment. Caddies must be naturalist, physicist, and psychologist, all wrapped in one white coverall.</p>
 
+<!-- Image-->
 <center>
       <a> <img src="image9.jpg" alt="Black Caddies Working The Masters" style="width:800px;height:600px;"> </a> 
       <div> <p class="caption"> Golfers Gil Morgan and Gary Player with their caddies in 1981. (Source: Garden & Gun).</p> </div>
@@ -110,6 +115,7 @@
 
 <p>The numbers of the old-school Black caddies have decreased, and recognition has come but lately. Lee Elder—a former caddie who also broke the Masters race barrier as a player, in 1975—died in 2021, not long after Augusta National and Paine College, an HBCU in Augusta, partnered to create endowed scholarships in his name. In 2023, Jariah Beard succumbed to cancer, and John Luther Elam Jr., a caddie who helped desegregate the Patch, died too.</p>
 
+<!-- Image-->
 <center>
       <a> <img src="image2.jpg" alt="Black Caddy Working The Masters" style="width:800px;height:600px;"> </a> 
       <div> <p class="caption"> Ben Hogan at the 1954 Masters with his caddie. (Source: Garden & Gun).</p> </div>
@@ -141,6 +147,7 @@
 
 <br>
 
+<!-- Related Items-->
 <div id="Links">
     <ul>
         <p> RELATED ITEMS:
@@ -152,9 +159,6 @@
     </ul>
 </div>
 
-
-
-end
 </div>
 </body>
 
