--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -3,11 +3,17 @@
     <title> Cait Heiderman Resume Project </title>
 <link rel="stylesheet" type="text/css" href="resume.css">
 
+        <style>
+            body {
+                background-color: navy;
+            }
+        </style>
 
 
     </head>
 
     <body>
+       
 
 <div id= "menu">
   <ul>
