--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -14,7 +14,11 @@
 
     <body>
        
-
+<div class="container border p-3">
+  <!-- Your webpage content goes here -->
+  <h1>Welcome!</h1>
+  <p>This is some content inside the bordered container.</p>
+</div>
 
 
 
