playing around with color

--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -5,7 +5,7 @@
 
         <style>
             body {
-                background-color: navy;
+                background-color: rgb(255, 250, 234);
             }
         </style>
 
@@ -14,11 +14,7 @@
 
     <body>
        
-<div class="container border p-3">
-  <!-- Your webpage content goes here -->
-  <h1>Welcome!</h1>
-  <p>This is some content inside the bordered container.</p>
-</div>
+<span class="border border-primary"></span>
 
 
 
