--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -14,7 +14,27 @@
 
     <body>
        
-<span class="border border-primary"></span>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 text-center">
+      <h2> Lorem ipsum dolor sit amet</h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80" 
+    class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" max-width="500px" height="auto" load="lazy"> <!-- I added the height and load to mimic the 1st hero image, wasn't sure if I should include it or not-->
+<br>
+    <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
+    </div>
+
+    <div class="col-md-6 text-center">
+      <h2> Lorem ipsum dolor sit amet</h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" 
+    class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" max-width="500px">
+<br>
+  <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
+
+ </div>
+</div>
 
 
 
