--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -1,37 +1,12 @@
+<!doctype html>
 <html lang="en">
-
-<head>
-    <title> Cait Heiderman Resume Project </title>
-<link rel="stylesheet" type="text/css" href="resume.css">
-
-        <style>
-            body {
-                background-color: rgb(255, 250, 234);
-            }
-        </style>
-
-
-</head>
-
- <body>
-
-    Cait Heiderman Resume
-
-
-
-    <div class="container text-center">
-  <div class="row">
-    <div class="col">
-      First in DOM, no order applied
-    </div>
-    <div class="col order-5">
-      Second in DOM, with a larger order
-    </div>
-    <div class="col order-1">
-      Third in DOM, with an order of 1
-    </div>
-  </div>
-</div>
-
-    </body>
+  <head>
+    <title> Cait Heiderman Resume Project</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+  </body>
 </html>
