--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    
+
  <!-- Hero start-->
 <div class="px-4 py-5 my-5 text-center">
   <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
@@ -30,6 +30,17 @@
 </div>
 <!-- Hero end-->
 
+
+<div class="row">
+ <div class="col-md-6">
+test
+
+ </div>
+ <div class="col-md-6">
+test
+
+ </div>
+</div>
 
 </body>
 </html>
