--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -32,11 +32,11 @@
 
 
 <div class="row">
- <div class="col-md-6">
+ <div class="col-md-6 text-center">
 test
 
  </div>
- <div class="col-md-6">
+ <div class="col-md-6 text-center">
 test
 
  </div>
