--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -34,6 +34,17 @@
 <div class="row">
  <div class="col-md-6 text-center">
 test
+<h2>ABOUT ME</h2>
+<p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
+  I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
+
+<h2> CONTACT</h2>
+<ul>
+    <li>cheiderm@terpmail.umd.edu</li> 
+    <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
+    <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
+  </ul>
+
 
  </div>
  <div class="col-md-6 text-center">
