--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -32,7 +32,8 @@
 
 
 <div class="row">
- <div class="col-md-6 text-center">
+    <div class="centered-container"
+ <div class="col-md-6 text-left">
 test
 <h2>ABOUT ME</h2>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
@@ -44,7 +45,7 @@ test
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul>
-
+ </div>
 
  </div>
  <div class="col-md-6 text-center">
