--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -32,8 +32,9 @@
 
 
 <div class="row">
-    <div class="centered-container"
- <div class="col-md-6 text-left">
+
+    
+ <div class="col-md-6 text-center">
 test
 <h2>ABOUT ME</h2>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
@@ -47,7 +48,7 @@ test
   </ul>
  </div>
 
- </div>
+ 
  <div class="col-md-6 text-center">
 test
 
