--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -33,8 +33,8 @@
 
 <div class="row">
 
-    
- <div class="col-md-6 text-center">
+
+ <div class="col-md-6 text-start">
 test
 <h2>ABOUT ME</h2>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
