--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -52,6 +52,61 @@ test
  <div class="col-md-6 text-start">
 test
 
+<div> <h2> <p class= "sectionheader"> Experience </p> </h2> </div>
+
+<div> <h3> <p class= "jobtitle"> PRN Front Desk Support </p> </h3> </div>
+
+<div> <h4> <p class= "organization"> SARC Harford County </p> </h4> </div>
+
+<div class= "date"> <h5> Nov 2023 to Present </h5> </div>
+
+<div class= "description">
+<p> I handle call lines to ensure clients, donors and vendors swiftly get in touch with
+nonprofit staff. I am proficient in Bloomerang Donor Management Software, where I
+process donations and write tax return thank you letters to maintain SARCs 501(c)(3)
+status. I use skills in graphic design to create various flyers for the safehouse and
+administrative buildings, as well as nonprofit resource brochures and fundraising event
+materials. I am proficient in Loomly Social Media Management Platform, where I create
+posts for the nonprofit's various social media sites.</p> </div>
+
+<div> <h3> <p class= "jobtitle"> Summer Research Fellow </p> </h3> </div>
+
+<div class= "organization"> <h4> UMD Office of Undergraduate Research Immersive Research & Innovation Experience </h4> </div>
+
+<div class= "date"> <h5> June 2025 to July 2025 </h5> </div>
+
+<div class= "description">
+<p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
+begin the stages of writing a book. I gathered and reviewed materials on a 1970s
+feminist news journal, Off Our Backs.</p> </div>
+
+<div> <h3> <p class= "jobtitle"> Peer Research Mentor </p> </h3> </div>
+
+<div class= "organization"> <h4> UMD FIRE: Visualizing Social Justice Stream </h4> </div>
+
+<div class= "date"> <h5> Jan 2025 to Present </h5> </div>
+
+<div class= "description">
+<p> I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
+stream in completing independent research projects on topics such as the intersection
+of the feminist movement and mental health, the intersection of politics and musical
+theater and the stories of South Asian women who have experienced sexual abuse. </p>
+</div>
+
+<div> <h3> <p class= "jobtitle"> Campus Connector </p> </h3> </div>
+
+<div class= "organization"> <h4> Maryland Promise Program </h4> </div>
+
+<div class= "date"> <h5> August 2024 to Present </h5> </div>
+
+<div class= "description">
+<p> I am a peer mentor for incoming freshman and transfer students joining the UMD
+Maryland Promise Program. I plan workshop events and build one-on-one relationships
+with students to foster community in the program. I also am a Campus Connector
+Squad Leader, where I mentor other Campus Connectors. </p>
+</div>
+
+
  </div>
 </div>
 
