--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -106,6 +106,14 @@ with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
 </div>
 
+<div> <h2> <p class= "sectionheader"> Education </p> </h2> </div>
+
+<div id= "degrees">
+<ul>
+    <li> Bachelor of Arts, Journalism and Government & Politics, University of Maryland,
+Expected May 2027 </li>
+</ul>
+</div>
 
  </div>
 </div>
