--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -46,7 +46,29 @@ test
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul>
+
+
+<h2> <p class= "sectionheader"> Skills </p> </h2>
+
+<div id= "do">
+<ul>
+  <li> Photography: I completed two courses at UMDs Philip Merrill College of
+Journalism which trained me in photojournalism. I learned to use a DSLR
+camera, Adobe Lightroom, Adobe Photoshop and to write AP style
+photocaptions </li>
+<li> Canva: I am proficient in Canva. I use the platform to create nonprofit brochures
+in English and Spanish, presentations and create promotional materials </li>
+<li> Journalism: I have experience with AP style, photojournalism and college news
+reporting. </li>
+</ul>
+
+
  </div>
+
+
+
+
+
 
  
  <div class="col-md-6 text-start">
