--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -59,6 +59,12 @@ in English and Spanish, presentations and create promotional materials </li>
 reporting. </li>
 </ul>
 
+<h2>LANGUAGES</h2>
+<ul>
+    <li> English: Fluent</li>
+    <li> French: Elementary</li>
+</ul>
+
 
  </div>
 
