--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -37,7 +37,8 @@
  <div class="col-md-6 text-start">
 test
 
-<img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80" 
+      <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:800px;height:600px;"> </a> 
+
 
 <h2>ABOUT ME</h2>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
