--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -22,6 +22,7 @@
 <body>
 
  <!-- Hero start-->
+  <div class="columns1"
 <div class="px-4 py-5 my-5 text-center">
   <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
   <div class="col-lg-6 mx-auto">
@@ -142,6 +143,8 @@ Expected May 2027 </li>
 </div>
 
  </div>
+</div>
+
 </div>
 
 </body>
