--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -147,10 +147,18 @@ Expected May 2027 </li>
 <div class="container px-4 text-center">
   <div class="row gx-5">
     <div class="col">
-      <div class="p-3">Custom column padding</div>
+      <div class="p-3">
+        <h2>ABOUT</h2>
+        <h4>biwrbcibcjwcjwbcobwocj</h4>
+        <h5>rbfjebrf</h5>
+        
+      </div>
     </div>
     <div class="col">
-      <div class="p-3">Custom column padding</div>
+      <div class="p-3">
+        <h2>ABOUT</h2>
+        <h4>biwrbcibcjwcjwbcobwocj</h4>
+        <h5>rbfjebrf</h5></div>
     </div>
   </div>
 </div>
