--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -144,7 +144,7 @@ Expected May 2027 </li>
  </div>
 </div>
 
-<div class="container px-4 text-center">
+<div class="container px-4 text-start">
   <div class="row gx-5">
     <div class="col">
       <div class="p-3">
