--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -148,9 +148,38 @@ Expected May 2027 </li>
   <div class="row gx-5">
     <div class="col">
       <div class="p-3">
-        <h2>ABOUT</h2>
-        <h4>biwrbcibcjwcjwbcobwocj</h4>
-        <h5>rbfjebrf</h5>
+         <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:400px;height:400px;"> </a> 
+
+
+<h2>ABOUT ME</h2>
+<p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
+  I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
+
+<h2> CONTACT</h2>
+<ul>
+    <li>cheiderm@terpmail.umd.edu</li> 
+    <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
+    <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
+  </ul>
+
+  <h2>SKILLS</h2>
+<ul>
+  <li> Photography: I completed two courses at UMDs Philip Merrill College of
+Journalism which trained me in photojournalism. I learned to use a DSLR
+camera, Adobe Lightroom, Adobe Photoshop and to write AP style
+photocaptions </li>
+<li> Canva: I am proficient in Canva. I use the platform to create nonprofit brochures
+in English and Spanish, presentations and create promotional materials </li>
+<li> Journalism: I have experience with AP style, photojournalism and college news
+reporting. </li>
+</ul>
+
+<h2>LANGUAGES</h2>
+<ul>
+    <li> English: Fluent</li>
+    <li> French: Elementary</li>
+</ul>
+
         
       </div>
     </div>
