--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -37,7 +37,7 @@
   <div class="row gx-5">
     <div class="col">
       <div class="p-3">
-         <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:420px;height:400px;" text-align="center"> </a> 
+         <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:420px;height:400px;"> </a> 
 
 
 <h2>ABOUT ME</h2>
