--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -22,10 +22,12 @@
 <body>
 
  <!-- Hero start-->
-<div class="px-4 py-5 my-5 text-center">
+<div class="topper"
+<div class="px-4 py-5 my-5 text-center"> 
   <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world's most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+  </div>
   </div>
 </div>
 <!-- Hero end-->
@@ -37,6 +39,7 @@
   <div class="row gx-5">
     <div class="col">
       <div class="p-3">
+
          <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:420px;height:400px;"> </a> 
 
 
