--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -22,7 +22,7 @@
 <body>
 
  <!-- Hero start-->
-<div class="hero px-4 py-5 my-5 text-center"> 
+<div class="hero" class="px-4 py-5 my-5 text-center"> 
   <h1 class="display-5 fw-bold text-body-emphasis">CAIT HEIDERMAN</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4"> JOURNALISM AND GVPT STUDENT</p>
