--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -34,8 +34,8 @@
 
 
 <div class="container px-4 text-start">
-  <div class="row gx-5 bg-primary">
-    <div class="col">
+  <div class="row gx-5">
+    <div class="col bg-primary">
       <div class="p-3">
 
          <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:420px;height:400px;"> </a> 
