--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -35,7 +35,7 @@
 
 <div class="container px-4 text-start">
   <div class="row gx-5">
-    <div class="col bg-secondary">
+    <div class="col bg-success">
       <div class="p-3">
 
          <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:420px;height:400px;"> </a> 
