--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -21,20 +21,20 @@
 </head>
 <body>
 
- <!-- Hero start-->
+
 <div class="px-4 py-5 my-5 text-center"> 
   <h1 class="display-5 fw-bold text-body-emphasis">CAIT HEIDERMAN</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4"> JOURNALISM AND GVPT STUDENT</p>
   </div>
   </div>
+
 <!-- Hero end-->
 
 
 
-
 <div class="container px-4 text-start">
-  <div class="row gx-5">
+  <div class="row1 gx-5">
     <div class="col bg-success text-light">
       <div class="p-3">
 
