--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -34,7 +34,7 @@
 
 
 <div class="container px-4 text-start">
-  <div class="row1 gx-5">
+  <div class="row gx-5">
     <div class="col bg-success text-light">
       <div class="p-3">
 
