--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -23,9 +23,9 @@
 
 
 <div class="px-4 py-5 my-5 text-center bg-success"> 
-  <h1 class="display-5 fw-bold text-body-emphasis">CAIT HEIDERMAN</h1>
+  <h1 class="display-5 fw-bold text-body-emphasis text-white">CAIT HEIDERMAN</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4"> JOURNALISM AND GVPT STUDENT</p>
+    <p class="lead mb-4 text-white"> JOURNALISM AND GVPT STUDENT</p>
   </div>
   </div>
 
