--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -73,7 +73,7 @@ reporting. </li>
         
       </div>
     </div>
-    <div class="col bg-light text-success">
+    <div class="col bg-light text-success-subtle">
       <div class="p-3">
         
 <div> <h2> <p class= "sectionheader"> Experience </p> </h2> </div>
