--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -33,12 +33,12 @@
 
 
 
-<div class="container px-4 text-start">
+<div class="container px-4 text-start img-center">
   <div class="row gx-5">
     <div class="col bg-dark text-light">
       <div class="p-3">
 
- <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px; text-align:center;"> </a> 
+ <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> 
 
 <h2>ABOUT ME</h2>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
