--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -33,7 +33,7 @@
 
 
 
-<div class="container px-4 text-start img-center">
+<div class="container px-4 text-start img-fluid">
   <div class="row gx-5">
     <div class="col bg-dark text-light">
       <div class="p-3">
