--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -52,7 +52,7 @@
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul>
 
-  <h2>SKILLS</h2>
+  <div> <p class="sectionheader"> <h2>SKILLS</h2> </p> </div>
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
