--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -52,7 +52,7 @@
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul>
 
-  <div> <h2> <p class= "sectionheader"> SKILLS </p> </h2> </div>
+  <div> <h2> <p class= "sectionhead"> SKILLS </p> </h2> </div>
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
