--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -41,11 +41,11 @@
 
  <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> 
 
- <h2>ABOUT ME</h2>
+ <div> <h2> <p class= "sectionhead"> ABOUT ME </p> </h2> </div>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
 
-<h2> CONTACT</h2>
+<div> <h2> <p class= "sectionhead"> CONTACT </p> </h2> </div>
 <ul>
     <li>cheiderm@terpmail.umd.edu</li> 
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
@@ -64,7 +64,7 @@ in English and Spanish, presentations and create promotional materials </li>
 reporting. </li>
 </ul>
 
-<h2>LANGUAGES</h2>
+<div> <h2> <p class= "sectionhead"> LANGUAGES </p> </h2> </div>
 <ul>
     <li> English: Fluent</li>
     <li> French: Elementary</li>
