--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -53,6 +53,7 @@
   </ul>
 
   <div> <h2> <p class= "sectionhead"> SKILLS </p> </h2> </div>
+  <div class= "description">
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
@@ -62,7 +63,7 @@ photocaptions </li>
 in English and Spanish, presentations and create promotional materials </li>
 <li> Journalism: I have experience with AP style, photojournalism and college news
 reporting. </li>
-</ul>
+</ul> </div>
 
 <div> <h2> <p class= "sectionhead"> LANGUAGES </p> </h2> </div>
 <ul>
