--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -42,15 +42,18 @@
  <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> 
 
  <div> <h2> <p class= "sectionhead"> ABOUT ME </p> </h2> </div>
+ <div class= "description">
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
+</div>
 
 <div> <h2> <p class= "sectionhead"> CONTACT </p> </h2> </div>
+<div class= "description">
 <ul>
     <li>cheiderm@terpmail.umd.edu</li> 
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
-  </ul>
+  </ul> </div>
 
   <div> <h2> <p class= "sectionhead"> SKILLS </p> </h2> </div>
   <div class= "description">
@@ -66,10 +69,11 @@ reporting. </li>
 </ul> </div>
 
 <div> <h2> <p class= "sectionhead"> LANGUAGES </p> </h2> </div>
+<div class= "description">
 <ul>
     <li> English: Fluent</li>
     <li> French: Elementary</li>
-</ul>
+</ul> </div>
 
         
       </div>
