--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -39,7 +39,7 @@
     <div class="col bg-dark text-light">
       <div class="p-3">
 
- <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> 
+<div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
 
  <div> <h2> <p class= "sectionhead"> ABOUT ME </p> </h2> </div>
  <div class= "description">
