--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -36,7 +36,7 @@
 
 <div class="container px-4 text-start">
   <div class="row gx-5">
-    <div class="col bg-black text-light">
+    <div class="col bg-black text-white">
       <div class="p-3">
 
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
@@ -78,7 +78,7 @@ reporting. </li>
         
       </div>
     </div>
-    <div class="col bg-light text-dark">
+    <div class="col bg-white text-black">
       <div class="p-3">
         
 <div> <h2> <p class= "sectionheader"> Experience </p> </h2> </div>
