--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -23,7 +23,7 @@
 <body>
 
 
-<div class="px-4 py-5 my-5 text-center bg-dark topper"> 
+<div class="px-4 py-5 my-5 text-center bg-black topper"> 
   <h1 class="display-5 fw-bold text-white">CAIT HEIDERMAN</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4 text-white"> JOURNALISM AND GVPT STUDENT</p>
