--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -68,7 +68,7 @@ in English and Spanish, presentations and create promotional materials </li>
 reporting. </li>
 </ul> </div>
 
-<div> <h2> <p class= "sectionhead"> LANGUAGES </p> </h2> </div>
+<div> <h2> <p class= "sectionhead"> LANGUAGES <i class="bi bi-translate"></i></p> </h2> </div>
 <div class= "description">
 <ul>
     <li> English: Fluent</li>
