--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -135,7 +135,7 @@ with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
 </div>
 
-<div> <h2> <p class= "sectionheader"> Education </p> </h2> </div>
+<div> <h2> <p class= "sectionheader"> Education <i class="bi bi-pencil"></i></p> </h2> </div>
 
 <div id= "degrees">
 <ul>
