--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -81,7 +81,7 @@ reporting. </li>
     <div class="col bg-white text-black">
       <div class="p-3">
         
-<div> <h2> <p class= "sectionheader"> Experience </p> </h2> </div>
+<div> <h2> <p class= "sectionheader"> Experience<i class="bi bi-lightbulb"></i></p> </h2> </div>
 
 <div> <h3> <p class= "jobtitle"> PRN Front Desk Support </p> </h3> </div>
 
