--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -47,7 +47,7 @@
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
 </div>
 
-<div> <h2> <p class= "sectionhead"> CONTACT </p> </h2> </div>
+<div> <h2> <p class= "sectionhead"> CONTACT<i class="bi bi-chat-text"></i> </p> </h2> </div>
 <div class= "description">
 <ul>
     <li>cheiderm@terpmail.umd.edu</li> 
