--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -55,7 +55,7 @@
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul> </div>
 
-  <div> <h2> <p class= "sectionhead"> SKILLS <br> <i class="bi bi-gear"></i></p> </h2> </div>
+  <div> <h2> <p class= "sectionhead"> SKILLS.   <i class="bi bi-gear"></i></p> </h2> </div>
   <div class= "description">
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
