--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -78,7 +78,7 @@ reporting. </li>
         
       </div>
     </div>
-    <div class="col bg-white text-black">
+    <div class="col bg-white second">
       <div class="p-3">
         
 <div> <h2> <p class= "sectionheader"> Experience <i class="bi bi-lightbulb"></i></p> </h2> </div>
