--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -51,8 +51,8 @@
 <div class= "description">
 <ul>
     <li>cheiderm@terpmail.umd.edu</li> 
-    <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
-    <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/" target=_new>LinkedIn</a></li> 
+    <li><a href="https://github.com/VogueTortellini" target=_new>GitHub</a></li>
   </ul> </div>
 
   <div> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"></i></p> </h2> </div>
