--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -50,7 +50,7 @@
 <div> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
 <div class= "description">
 <ul>
-    <li> <a href="mailto: cheiderm@terpmail.umd.edu" target=_new></a></li> 
+    <li> <a href= mailto: cheiderm@terpmail.umd.edu target=_new></a></li> 
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/" target=_new>LinkedIn</a></li> 
     <li><a href="https://github.com/VogueTortellini" target=_new>GitHub</a></li>
   </ul> </div>
