--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -34,15 +34,15 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">EXPERIENCE</a>
+           <a class="nav-link active" aria-current="page" href="#">EXPERIENCE <i class="bi bi-lightbulb"></i></a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">SKILLS</a>
+           <a class="nav-link active" aria-current="page" href="#">SKILLS <i class="bi bi-gear"></i></a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+           <a class="nav-link active" aria-current="page" href="#">CONTACT <i class="bi bi-chat-text"></i></a>
           </li>
        </ul>
        
