--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -33,17 +33,31 @@
 
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+        <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">ABOUT ME <i class="bi bi-person"></i></a>
+         </li>
+
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">CONTACT <i class="bi bi-chat-text"></i></a>
+          </li>
+
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">SKILLS <i class="bi bi-gear"></i></a>
+         </li>
+
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">LANGUAGES <i class="bi bi-translate"></i></a>
+         </li>
+
          <li class="nav-item">
            <a class="nav-link active" aria-current="page" href="#">EXPERIENCE <i class="bi bi-lightbulb"></i></a>
          </li>
 
-          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">SKILLS <i class="bi bi-gear"></i></a>
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">EDUCATION <i class="bi bi-pencil"></i></a>
          </li>
 
-          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">CONTACT <i class="bi bi-chat-text"></i></a>
-          </li>
+
        </ul>
        
      </div>
@@ -110,7 +124,7 @@ reporting. </li>
     <div class="col second">
       <div class="p-3">
         
-<div> <h2> <p class= "sectionheader"> Experience <i class="bi bi-lightbulb"></i></p> </h2> </div>
+<div> <h2> <p class= "sectionheader"> EXPERIENCE <i class="bi bi-lightbulb"></i></p> </h2> </div>
 
 <div> <h3> <p class= "jobtitle"> PRN Front Desk Support </p> </h3> </div>
 
@@ -164,7 +178,7 @@ with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
 </div>
 
-<div> <h2> <p class= "sectionheader"> Education <i class="bi bi-pencil"></i></p> </h2> </div>
+<div> <h2> <p class= "sectionheader"> EDUCATION <i class="bi bi-pencil"></i></p> </h2> </div>
 
 <div id= "degrees">
 <ul>
