--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -38,7 +38,7 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">ABOUT ME <i class="bi bi-person"> </i> </a>
+           <a class="nav-link active" aria-current="page" href="div_ABOUT ME">ABOUT ME <i class="bi bi-person"> </i> </a>
          </li>
 
          <li class="nav-item">
@@ -94,7 +94,7 @@
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
 </div>
 
-<div> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
+<div id="div_ABOUT ME"> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
 <div class= "description">
 <ul>
     <li> cheiderm@terpmail.umd.edu </li> 
